# sol2_issue_1508

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
sol/sol_eab1430c/sol/: sol.hpp
